--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@coinbase/onchainkit": "^0.38.4",
         "@rainbow-me/rainbowkit": "^2.2.4",
+        "lucide-react": "^0.487.0",
         "next": "^15.2.4",
         "permissionless": "^0.1.26",
         "react": "^18",
