--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,9 +55,6 @@ jobs:
     name: Build Next.js App
     runs-on: ubuntu-latest
     needs: [install-dependencies, generate-version]
-    strategy:
-      matrix:
-        network: [devnet, testnet, mainnet]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -69,7 +66,7 @@ jobs:
           key: yarn-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
           restore-keys: yarn-${{ runner.os }}-
 
-      - name: Build Next.js app for ${{ matrix.network }}
+      - name: Build Next.js app
         run: npm run build
         env:
           NODE_ENV: production
@@ -83,13 +80,13 @@ jobs:
           cp -r public .next/standalone/public
 
       - name: Archive standalone build
-        run: zip -r aiho-app-${{ matrix.network }}.zip .next/standalone
+        run: zip -r aiho-app.zip .next/standalone
 
       - name: Upload Build as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: aiho-app-${{ matrix.network }}
-          path: aiho-app-${{ matrix.network }}.zip
+          name: aiho-app
+          path: aiho-app.zip
 
   release:
     name: Create Single GitHub Release
