--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
 
       - name: Build Next.js app
         run: yarn build
+        env:
+          NEXT_PUBLIC_CDP_API_KEY: ${{ secrets.NEXT_PUBLIC_CDP_API_KEY }}
+          NEXT_PUBLIC_ENVIRONMENT: ${{ secrets.NEXT_PUBLIC_ENVIRONMENT }}
+          NEXT_PUBLIC_WC_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_WC_PROJECT_ID }}
 
       - name: Generate version tag
         id: version
